Ustawianie ResultFragment, korekta BackStacka i actionBar

--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -66,7 +66,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="4dp"
             android:text="@string/agree2_button_text"
-            android:onClick="@{() -> testViewModel.onButtonClick()}"
+            android:onClick="@{() -> testViewModel.onButtonClickNext()}"
             app:layout_constraintBottom_toTopOf="@+id/agree_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -137,6 +137,7 @@
             android:layout_marginEnd="28dp"
             android:layout_marginBottom="32dp"
             android:text="@string/previus_question_button_text"
+            android:onClick="@{() -> testViewModel.onButtonClickPrevius()}"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
