--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -24,13 +24,21 @@
         tools:layout="@layout/test_fragment" >
         <action
             android:id="@+id/action_testFragment_to_resultFragment"
-            app:destination="@id/resultFragment" />
+            app:destination="@id/resultFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/testFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.example.kompaspolityczny.screens.result.ResultFragment"
         android:label="result_fragment"
-        tools:layout="@layout/result_fragment" />
+        tools:layout="@layout/result_fragment">
+        <argument
+            android:name="questionNumbers"
+            app:argType="integer"
+            android:defaultValue="0" />
+    </fragment>
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.example.kompaspolityczny.screens.history.HistoryFragment"
