Dodanie Klasy Question, zamiana pytan z Stringów na klase Question. Każde pytanie zawiera treść, kategorie, oraz przynależność.

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -35,9 +35,8 @@
         android:label="result_fragment"
         tools:layout="@layout/result_fragment">
         <argument
-            android:name="questionNumbers"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:name="categoriesResult"
+            app:argType="float[]" />
     </fragment>
     <fragment
         android:id="@+id/historyFragment"
