--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="resultViewModel"
             type="com.example.kompaspolityczny.screens.result.ResultViewModel" />
@@ -20,17 +21,97 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_result_fragment" />
+            android:text="@string/hello_blank_result_fragment"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
-            android:id="@+id/result_textView"
+            android:id="@+id/category1Left_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@{String.valueOf(resultViewModel.score)}"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="128dp"
+            android:layout_marginBottom="16dp"
+            android:text="@{String.valueOf(resultViewModel.results[0])}"
+            app:layout_constraintBottom_toTopOf="@+id/category2Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/category2Left_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="128dp"
+            android:layout_marginBottom="16dp"
+            android:text="@{String.valueOf(resultViewModel.results[2])}"
+            app:layout_constraintBottom_toTopOf="@+id/category3Left_textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/category1Left_textView" />
+
+        <TextView
+            android:id="@+id/category3Left_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="128dp"
+            android:layout_marginBottom="16dp"
+            android:text="@{String.valueOf(resultViewModel.results[4])}"
+            app:layout_constraintBottom_toTopOf="@+id/category4Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/category2Left_textView" />
+
+        <TextView
+            android:id="@+id/category4Left_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="128dp"
+            android:layout_marginBottom="16dp"
+            android:text="@{String.valueOf(resultViewModel.results[6])}"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/category3Left_textView" />
+
+        <TextView
+            android:id="@+id/category1Right_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(resultViewModel.results[1])}"
+            app:layout_constraintBaseline_toBaselineOf="@+id/category1Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/category1Left_textView" />
+
+        <TextView
+            android:id="@+id/category2Right_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(resultViewModel.results[3])}"
+            app:layout_constraintBaseline_toBaselineOf="@+id/category2Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/category2Left_textView" />
+
+        <TextView
+            android:id="@+id/category3Right_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(resultViewModel.results[5])}"
+            app:layout_constraintBaseline_toBaselineOf="@+id/category3Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/category3Left_textView" />
+
+        <TextView
+            android:id="@+id/category4Right_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(resultViewModel.results[7])}"
+            app:layout_constraintBaseline_toBaselineOf="@+id/category4Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/category4Left_textView" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
