--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -41,5 +41,19 @@
             app:layout_constraintStart_toStartOf="@+id/start_test_button"
             app:layout_constraintTop_toBottomOf="@+id/start_test_button" />
 
+        <TextView
+            android:id="@+id/author_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/roboto"
+            android:text="@string/author_text"
+            android:textAlignment="center"
+            android:textColor="#1C5116"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
