Poprawienie wyświetlania wyników

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -9,6 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_history_fragment" />
+        android:text="@string/hello_blank_history_fragment"
+        android:textAlignment="center"
+        android:textColor="#000000" />
 
 </FrameLayout>
