--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -8,13 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".screens.title.TitleFragment">
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_title_fragment"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
 
         <Button
             android:id="@+id/start_test_button"
@@ -22,12 +15,11 @@
             android:layout_height="wrap_content"
             android:text="@string/start_test_button_text"
             android:theme="@style/TitleButton"
-            app:layout_constraintBottom_toTopOf="@+id/history_button"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/author_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread" />
+            app:layout_constraintVertical_bias="0.25" />
 
         <Button
             android:id="@+id/history_button"
