--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -18,100 +18,189 @@
 
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_result_fragment"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
-
-        <TextView
             android:id="@+id/category1Left_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="128dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginBottom="32dp"
             android:text="@{String.valueOf(resultViewModel.results[0])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/category2Left_textView"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/category1Right_textView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="50" />
 
         <TextView
             android:id="@+id/category2Left_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="128dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginBottom="32dp"
             android:text="@{String.valueOf(resultViewModel.results[2])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/category3Left_textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/category1Left_textView" />
+            app:layout_constraintEnd_toStartOf="@+id/category2Right_textView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/category1Left_textView"
+            tools:text="50" />
 
         <TextView
             android:id="@+id/category3Left_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="128dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginBottom="32dp"
             android:text="@{String.valueOf(resultViewModel.results[4])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/category4Left_textView"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/category3Right_textView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/category2Left_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/category2Left_textView"
+            tools:text="50" />
 
         <TextView
             android:id="@+id/category4Left_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="128dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginBottom="32dp"
             android:text="@{String.valueOf(resultViewModel.results[6])}"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/category4Right_textView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/category3Left_textView" />
-
-        <TextView
-            android:id="@+id/category1Right_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{String.valueOf(resultViewModel.results[1])}"
-            app:layout_constraintBaseline_toBaselineOf="@+id/category1Left_textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/category1Left_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/category3Left_textView"
+            tools:text="50" />
 
         <TextView
             android:id="@+id/category2Right_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="108dp"
             android:text="@{String.valueOf(resultViewModel.results[3])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/category2Left_textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/category2Left_textView" />
+            tools:text="50" />
 
         <TextView
             android:id="@+id/category3Right_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="106dp"
             android:text="@{String.valueOf(resultViewModel.results[5])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/category3Left_textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/category3Left_textView" />
+            tools:text="50" />
 
         <TextView
             android:id="@+id/category4Right_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="106dp"
             android:text="@{String.valueOf(resultViewModel.results[7])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/category4Left_textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/category4Left_textView" />
+            tools:text="50" />
+
+        <TextView
+            android:id="@+id/category1Right_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="110dp"
+            android:text="@{String.valueOf(resultViewModel.results[1])}"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/category1Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="50" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="195dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/gospodarka_text"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/category1Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/społeczeństwo_text"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/category2Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/category1Left_textView" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/polityka_wewnętrzna_text"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/category3Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/category2Left_textView" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/polityka_zewnętrzna_text"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/category4Left_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/category3Left_textView" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="@string/podziękowanie_text"
+            android:textColor="#135A2B"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
