--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="testViewModel"
             type="com.example.kompaspolityczny.screens.test.TestViewModel" />
     </data>
-
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,26 +18,22 @@
 
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_test_fragment"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="-77dp" />
-
-        <TextView
             android:id="@+id/question_number_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@{@string/question_number_format(testViewModel.questionNumber)}"
             android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/question_textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            android:text="@{@string/question_number_format(testViewModel.questionNumber)}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
             tools:text="Pytanie nr. :" />
 
         <TextView
@@ -45,14 +41,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="64dp"
-            android:textAlignment="center"
+            android:layout_marginBottom="16dp"
             android:text="@{testViewModel.question}"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/agree2_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/question_number_textView"
             tools:text="Tekst pytania, które może być bardzo długie. Nawet dłuższe od tego tutaj podanego i pokazanego w tym przykładzie. Bla Bla Bla, tak zdecydowanie" />
@@ -61,12 +58,14 @@
             android:id="@+id/agree2_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="4dp"
-            android:text="@string/agree2_button_text"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_green_dark"
             android:onClick="@{() -> testViewModel.onButtonClickNext_agree2()}"
+            android:text="@string/agree2_button_text"
+            android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/agree_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,27 +74,29 @@
         <Button
             android:id="@+id/agree_button"
             android:layout_width="0dp"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_agree1()}"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_green_light"
+            android:onClick="@{() -> testViewModel.onButtonClickNext_agree1()}"
             android:text="@string/agree_button_text"
             app:layout_constraintBottom_toTopOf="@+id/neutral_button"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/agree2_button" />
 
         <Button
             android:id="@+id/neutral_button"
             android:layout_width="0dp"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_neutral()}"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="@{() -> testViewModel.onButtonClickNext_neutral()}"
             android:text="@string/neutral_button_text"
             app:layout_constraintBottom_toTopOf="@+id/disagree_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,12 +106,13 @@
         <Button
             android:id="@+id/disagree_button"
             android:layout_width="0dp"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_disagree1()}"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_red_light"
+            android:onClick="@{() -> testViewModel.onButtonClickNext_disagree1()}"
             android:text="@string/disagree_button_text"
             app:layout_constraintBottom_toTopOf="@+id/disagree2_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -120,12 +122,13 @@
         <Button
             android:id="@+id/disagree2_button"
             android:layout_width="0dp"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_disagree2()}"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_red_dark"
+            android:onClick="@{() -> testViewModel.onButtonClickNext_disagree2()}"
             android:text="@string/disagree2_button_text"
             app:layout_constraintBottom_toTopOf="@+id/previus_question_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -136,15 +139,15 @@
             android:id="@+id/previus_question_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginBottom="32dp"
-            android:text="@string/previus_question_button_text"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="64dp"
+            android:background="@android:color/darker_gray"
             android:onClick="@{() -> testViewModel.onButtonClickPrevius()}"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
+            android:text="@string/previus_question_button_text"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/disagree2_button" />
 
