--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#272727</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="layoutBackground">#121212</color>
+    <color name="authorDescription">#BB86FC</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="ok_green_color">#6ab343</color>
     <color name="selected_green_color">#388310</color>
