Zupdatowanie build.gradle

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="background">@color/selected_red_color</item>
+        <item name="elevation">50dp</item>
     </style>
 
     <style name="TitleButton" parent="Widget.AppCompat.Button.Colored">
