--- a/app/src/main/res/layout-v21/fragment_title.xml
+++ b/app/src/main/res/layout-v21/fragment_title.xml
@@ -15,7 +15,9 @@
             android:id="@+id/start_test_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:shadowColor="#D6C2C2"
             android:text="@string/start_test_button_text"
+            android:elevation="50dp"
             android:theme="@style/TitleButton"
             app:layout_constraintBottom_toTopOf="@+id/author_textView"
             app:layout_constraintEnd_toEndOf="parent"
