--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="result"
             type="com.example.kompaspolityczny.database.TestResult" />
@@ -25,20 +26,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:testResultID="@{result}"
             tools:text="ID OF TESTRESULT" />
 
         <TextView
             android:id="@+id/gospodarkaLeft_string"
+            testResultGospodarkaLeft="@{result}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            tools:text="LICZBA GOSPODARKA LEFT"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/testResult_id" />
+            app:layout_constraintTop_toBottomOf="@+id/testResult_id"
+            tools:text="LICZBA GOSPODARKA LEFT" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
