Dodanie Obrazka do RecyclerView

--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -16,6 +16,19 @@
         android:orientation="vertical">
 
 
+        <ImageView
+            android:id="@+id/compass_image"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/compass_image_description"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_launcher_foreground" />
+
         <TextView
             android:id="@+id/testResult_id"
             android:layout_width="0dp"
@@ -23,7 +36,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/compass_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:testResultID="@{result}"
@@ -39,7 +52,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/compass_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/testResult_id"
             tools:text="LICZBA GOSPODARKA LEFT" />
