Analiza, optymalizacja i czyszczenia całego kodu

--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -63,7 +63,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_agree2()}"
+            android:onClick="@{() -> testViewModel.onButtonClickNextStrongAgree()}"
             android:text="@string/agree2_button_text"
             android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/agree_button"
@@ -80,7 +80,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_light"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_agree1()}"
+            android:onClick="@{() -> testViewModel.onButtonClickNextAgree()}"
             android:text="@string/agree_button_text"
             app:layout_constraintBottom_toTopOf="@+id/neutral_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_neutral()}"
+            android:onClick="@{() -> testViewModel.onButtonClickNextNeutral()}"
             android:text="@string/neutral_button_text"
             app:layout_constraintBottom_toTopOf="@+id/disagree_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_red_light"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_disagree1()}"
+            android:onClick="@{() -> testViewModel.onButtonClickNextDisagree()}"
             android:text="@string/disagree_button_text"
             app:layout_constraintBottom_toTopOf="@+id/disagree2_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_red_dark"
-            android:onClick="@{() -> testViewModel.onButtonClickNext_disagree2()}"
+            android:onClick="@{() -> testViewModel.onButtonClickNextStrongDisagree()}"
             android:text="@string/disagree2_button_text"
             app:layout_constraintBottom_toTopOf="@+id/previus_question_button"
             app:layout_constraintEnd_toEndOf="parent"
